<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">麦宝星</string>
    <string name="facebook_app_id">362794367247204</string>
    <string name="service_name">MaxBabe</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="cube_ptr_pull_down">下拉</string>
    <string name="cube_ptr_pull_down_to_refresh">下拉刷新</string>
    <string name="cube_ptr_release_to_refresh">释放刷新</string>
    <string name="cube_ptr_refreshing">加载中...</string>
    <string name="cube_ptr_refresh_complete">更新完成.</string>
    <string name="cube_ptr_last_update">上次更新:&#160;</string>
    <string name="cube_ptr_seconds_ago">&#160;秒之前</string>
    <string name="cube_ptr_minutes_ago">&#160;分钟之前</string>
    <string name="cube_ptr_hours_ago">&#160;小时之前</string>
    <string name="locating">定位中...</string>
    <string name="just_now">刚刚发布</string>
    <string name="minutes_ago">分钟前发布</string>
    <string name="weather_set">天气设置</string>
    <string name="push_msg">推送通知</string>
    <string name="automatic_update">自动更新天气</string>
    <string name="only_wifi">仅WIFI环境下更新</string>
    <string name="noti_setting">通知栏设置</string>
    <string name="gps_setting">GPS定位</string>
    <string name="pengyouquan">朋友圈</string>
    <string name="weixin">微信好友</string>
    <string name="weibo">微博</string>
    <string name="share_to">分享到</string>
    <string name="cancel">取消</string>
    <string name="version">版本号 0.0.2</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="account">账户</string>
    <string name="add_device">添加[怪兽宝宝]监控器</string>
    <string name="baby_info">宝宝信息</string>
    <string name="thirdpart">用第三方账户登录</string>
    <string name="phone_and_email">手机号/邮箱登录 >></string>
    <string name="choose_city">选择城市</string>
    <string name="auto_locating">自动定位中&#8230;</string>
    <string name="hand_choose">热门城市</string>
    <string name="city_search_hint">输入搜索城市</string>
    
    <string name="share">分享</string>
    <string name="about_us">关于我们</string>
    <string name="weare">我和我的团队\n正在做着一件\n让我们内心都很期待的事情~</string>
    <string name="whoami">——Maxtain团队</string>
    <string name="libo">理小博</string>
    <string name="ruishao">蕊少爷</string>
    <string name="showbin">Showbin</string>
    <string name="gaohui">蜗牛君</string>
    <string name="liuliu">榴榴</string>
    <string name="founder">创始人</string>
    <string name="cofounder">联合创始人</string>
    <string name="paotang">跑堂博士</string>
    <string name="reg_new_title">注册新用户</string>
    <string name="reg_new_title2">绑定手机号</string>
    <string name="reg_username">Email</string>
    <string name="reg_password">密码</string>
    <string name="old_password">旧密码</string>
    <string name="reg_nickname">昵称</string>
    <string name="reg_phone">手机号</string>
    <string name="right_now">立即登录</string>
    <string name="reg_sex">性别</string>
    <string name="modify">修改</string>
    <string name="female">女哒</string>
    <string name="male">男哒</string>
    <string name="please_not_switch_too_fast">请不要切换的太快哦</string>
    <string name="quit_login">退出登录</string>
    <string name="login_suc">登录成功</string>
    <string name="feedback">意见反馈</string>
    <string name="sorry_no_login">您还没有登录-.-</string>
    <string name="input_password">输入密码</string>
    <string name="reg_username_or_phone">邮箱或手机号</string>
    <string name="onewords_def">今天天气不错哦！</string>
    <string name="quit">再按一次退出程序</string>
    <string name="custom_tab">自定义</string>
    <string name="recommend_tab">推荐</string>
    <string name="loginpage_reg_tips">怎么可以还没注册T_T\n注册即可分享每日心情哦！</string>
    <string name="loginpage_login_tips">有账号了？\n那等什么，还不登录！！</string>
    <string name="bienao">别刷啦，刷碗都没见你这么积极！！</string>
    <string name="aqi_zh">空气质量指数</string>
    <string name="aqi_title">空气质量指数（Air Quality Index，简称AQI），是定量描述空气质量状况的无量纲指数。</string>
    <string name="aqi_t1">一级（超赞）\n空气质量令人满意，基本无空气污染</string>
    <string name="aqi_t2">二级（还不错）\n空气质量可接受，但某些污染物可能对极少数异常敏感人群健康有较弱影响</string>
    <string name="aqi_t3">三级（有点差哦）\n易感人群症状有轻度加剧，健康人群出现刺激症状</string>
    <string name="aqi_t4">四级（蛮差的）\n进一步加剧易感人群症状，可能对健康人群心脏、呼吸系统有影响</string>
    <string name="aqi_t5">五级（别出门了）\n心脏病和肺病患者症状显著加剧，运动耐受力降低，健康人群普遍出现症状</string>
    <string name="aqi_t6">六级（已爆表）\n健康人群运动耐受力降低，有明显强烈症状，提前出现某些疾病</string>
    <string name="share_tips">登陆后，点击上方文字可修改心情与名字</string>
    <string name="share_tips_logged">点击上方文字修改心情</string>
    <string name="share_mode">分享心情卡片</string>
    <string name="default_who">麦宝</string>
    <string name="forget_password">忘记密码</string>
    <string name="retrive">找回</string>
    <string name="confirm">确定</string>
    <string name="please_login_your_email_and_check">已发送电子邮件到您的电子邮箱\n请前往邮箱重置密码</string>
</resources>