<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue" >

    <ImageView
        android:id="@+id/iv_back"
        style="@style/DirectionIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icon_back" />

    <TextView
        style="@style/DirectionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/iv_back"
        android:text="@string/about_us" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_back"
        android:layout_marginTop="10dp"
        android:background="@color/blue"
        android:overScrollMode="never"
        android:scrollbars="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="30dp"
                android:src="@drawable/icon_quotes_01" />

            <TextView
                android:id="@+id/heart"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/leftp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:lineSpacingMultiplier="2.0"
                android:text="@string/weare"
                android:textAlignment="center"
                android:textColor="#fff"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/whoami"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/heart"
                android:layout_marginRight="20dp"
                android:gravity="right"
                android:lineSpacingMultiplier="2.0"
                android:text="@string/whoami"
                android:textAlignment="center"
                android:textColor="#fff"
                android:textSize="20sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="30dp"
                android:layout_marginTop="0dp"
                android:src="@drawable/icon_quotes_02" />

            <Button
                android:id="@+id/button_feedback"
                style="@style/Btns"
                android:layout_marginTop="10dp"
                android:text="@string/feedback" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/teammate01" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-4dp"
                android:text="@string/libo"
                android:textColor="#fff"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/founder"
                android:textColor="#fff"
                android:textSize="11sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/teammate02" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-4dp"
                android:text="@string/ruishao"
                android:textColor="#fff"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cofounder"
                android:textColor="#fff"
                android:textSize="11sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/teammate03" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-4dp"
                android:text="@string/showbin"
                android:textColor="#fff"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cofounder"
                android:textColor="#fff"
                android:textSize="11sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/teammate04" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-4dp"
                android:text="@string/gaohui"
                android:textColor="#fff"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cofounder"
                android:textColor="#fff"
                android:textSize="11sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/teammate05" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-4dp"
                android:text="@string/liuliu"
                android:textColor="#fff"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:text="@string/paotang"
                android:textColor="#fff"
                android:textSize="11sp" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>