<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/iv_back"
        style="@style/DirectionIcon"
        android:src="@drawable/icon_back" />

    <TextView
        style="@style/DirectionTextView"
        android:layout_toRightOf="@id/iv_back"
        android:text="@string/login" />

    <TextView
        android:id="@+id/tv_reg_tips"
        style="@style/TextView"
        android:layout_below="@id/iv_back"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:lineSpacingMultiplier="1.5"
        android:text="@string/loginpage_reg_tips"
        android:textSize="15sp" />

    <ImageView
        android:id="@+id/iv_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_reg_tips"
        android:layout_centerHorizontal="true"
        android:src="@drawable/image_account_arrow" />

    <RelativeLayout
        android:id="@+id/rl_reg_button"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_arrow"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-22dp" >

        <Button
            android:id="@+id/button_register"
            style="@style/Btns"
            android:layout_centerVertical="true"
            android:text="@string/register" />

        <ImageView
            android:id="@+id/iv_cry_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/image_account_login" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_login_button"
        style="@style/TextView"
        android:layout_below="@id/rl_reg_button"
        android:layout_marginTop="45dp"
        android:gravity="center"
        android:lineSpacingMultiplier="1.5"
        android:text="@string/loginpage_login_tips"
        android:textSize="15sp" />

    <RelativeLayout
        android:id="@+id/rl_login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_login_button"
        android:layout_centerHorizontal="true" >

        <ImageView
            android:id="@+id/iv_love_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:paddingBottom="20dp"
            android:src="@drawable/image_account_signin" />

        <Button
            android:id="@+id/tv_logway2"
            style="@style/Btns"
            android:layout_alignBottom="@+id/iv_love_icon"
            android:text="@string/right_now" />
    </RelativeLayout>

</RelativeLayout>